--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "jest src",
+    "test-v": "npx jest src --verbose",
     "lint": "eslint src --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -69,6 +70,7 @@
   "dependencies": {
     "clsx": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^10.0.0"
   }
 }
