add components for shop
add components for shop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "autodocs",
-        "uuidv"
+        "clsx",
+        "predeploy",
+        "uuidv",
+        "сноубординга"
     ]
 }
