--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-mdx-gfm": "^7.6.17",
+    "@storybook/addons": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^7.6.17",
