--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,8 @@
 {
-	"presets": [
-		["@babel/preset-env", { "useBuiltIns": "entry", "corejs": "3.22" }],
-		"@babel/preset-react",
-		"@babel/preset-typescript"
-	]
+  "presets": [
+    ["@babel/preset-env", { "useBuiltIns": "entry", "corejs": "3.22" }],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ],
+  "plugins": ["@emotion"]
 }
