--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,6 @@
     "plugin:react/jsx-runtime", // позволяет не импортировать реакт
     "plugin:react-hooks/recommended", //поддержка хуков
     "plugin:import/recommended", // подсказки при импорте
-    // "airbnb",
     "prettier", // отключает конфликты с prettier
     "plugin:prettier/recommended",
     "plugin:jest/recommended",
@@ -26,9 +25,10 @@
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/triple-slash-reference": "error",
+    "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "react/jsx-uses-vars": "error",
     "react/jsx-uses-react": "error",
-    "@emotion/css-prop": "error"
+    "@emotion/css-prop": "off" // Отключить для компонентов без Emotion
   },
   "settings": {
     "react": {
