--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,27 @@
 {
-	"compilerOptions": {
-		"outDir": "./dist",
-	  "baseUrl": ".",
-	  "paths": {
-			"src/*": ["src/*"]
-	  },
-	  "lib": ["dom", "dom.iterable", "esnext"],
-	  "allowJs": true,
-	  "allowSyntheticDefaultImports": true,
-	  "skipLibCheck": true,
-	  "esModuleInterop": true,
-	  "target": "ES2015",
-	  "module": "esnext",
-	  "sourceMap": true,
-	  "noImplicitAny": true,
-	  "downlevelIteration": true,
-	  "moduleResolution": "node",
-	  "resolveJsonModule": true,
-	  "jsx": "react"
-	}
+  "compilerOptions": {
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"]
+    },
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "target": "ES2015",
+    "module": "esnext",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "downlevelIteration": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "jsxImportSource": "@emotion/react",
+    "jsx": "react-jsx",
+    "strict": true, // Включение строгого режима
+    "forceConsistentCasingInFileNames": true // Включение проверки регистра для имен файлов
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
-  
