--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "strict": true, // Включение строгого режима
     "forceConsistentCasingInFileNames": true // Включение проверки регистра для имен файлов
   },
-  "include": ["src"],
+  "include": ["src", "declarations.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
