add forms and authorization
  - added SignInForm;
  - added SignUpForm;
  - added OperationForm;
  - added ProductForm;
  - added ProfileForm;
  - added ErrorProvider for centralized error handling;
  - added api redux (backend: https://users-store.onrender.com);
  - added authorization logic.

--- a/package.json
+++ b/package.json
@@ -76,10 +76,14 @@
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "axios": "^1.7.9",
     "clsx": "^1.2.1",
     "i18next": "^23.16.5",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.9.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
     "react-i18next": "^15.1.1",
     "uuid": "^10.0.0"
   }
