--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.1.1",
+    "react-router-dom": "^7.1.0",
     "uuid": "^10.0.0"
   }
 }
