--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "clsx": "^1.2.1",
     "i18next": "^23.16.5",
@@ -85,7 +86,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "redux-persist": "^6.0.0",
     "uuid": "^10.0.0"
   }
 }
